src/objects/BMCServiceDesk__FAQ__c.object
<CustomObject>
    <description>This object allows you to store data for FAQs.</description>
    <fields>
        <fullName>BMCServiceDesk__Answer__c</fullName>
        <inlineHelpText>Use this field to enter the answer to the frequently asked question.</inlineHelpText>
        <label>Answer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKFAQ_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAQ Category</label>
        <referenceTo>BMCServiceDesk__FAQ_Category__c</referenceTo>
        <relationshipLabel>FAQs</relationshipLabel>
        <relationshipName>FAQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if this record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Question__c</fullName>
        <inlineHelpText>Use this field to enter the frequently asked question.</inlineHelpText>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RatingSum__c</fullName>
        <description>Sum of rating through rollup summary field</description>
        <label>RatingSum</label>
        <summarizedField>BMCServiceDesk__FAQ_Feedback__c.BMCServiceDesk__Rating__c</summarizedField>
        <summaryForeignKey>BMCServiceDesk__FAQ_Feedback__c.BMCServiceDesk__FKFAQ__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rating__c</fullName>
        <description>Average of Rating</description>
        <formula>IF(BMCServiceDesk__Total_Feedback__c == 0, 0 , BMCServiceDesk__RatingSum__c  /  BMCServiceDesk__Total_Feedback__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Display_Order__c</fullName>
        <label>SelfService Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Feedback__c</fullName>
        <description>Total number of feedback</description>
        <label>Total Feedback</label>
        <summaryForeignKey>BMCServiceDesk__FAQ_Feedback__c.BMCServiceDesk__FKFAQ__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>FAQ</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Question__c</columns>
        <columns>BMCServiceDesk__Answer__c</columns>
        <columns>BMCServiceDesk__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>FAQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__FAQRule1</fullName>
        <active>true</active>
        <description>Rule for checking if Category not equal to null</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKFAQ_Category__c) , ISBLANK(BMCServiceDesk__FKFAQ_Category__c))</errorConditionFormula>
        <errorMessage>Please select a FAQ Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__FAQRule2</fullName>
        <active>true</active>
        <description>Rule for checking if Question not equal to null</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__Question__c) , ISBLANK(BMCServiceDesk__Question__c))</errorConditionFormula>
        <errorMessage>Please enter a Question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__FAQRule3</fullName>
        <active>true</active>
        <description>Rule for checking if Answer not equal to null</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__Answer__c) , ISBLANK(BMCServiceDesk__Answer__c))</errorConditionFormula>
        <errorMessage>Please enter an Answer.</errorMessage>
    </validationRules>
</CustomObject>